swagger доки для зон
