# controller/heartbeatController.go
@@ -7,6 +7,17 @@ import (
 	"gobeacon/service"
 )
 
+// HeartbeatPhone godoc
+// @Summary Прием координат от смартфона
+// @Description Принимает координаты от смартфона, происходит: сохранение и проверка на вхождение в неозоны, обновление последних данных трекера
+// @securityDefinitions.basic BasicAut
+// @Accept json
+// @Param request body model.Heartbeat true "Запрос с координатами и флагами устройства"
+// @Success 200 "ok"
+// @Router /heartbeat [post]
+// @Failure 400 "err"
+// @Failure 500 "err"
+// @Tags Мониторинг
 func HeartbeatPhone(c *gin.Context) {
 	req := model.Heartbeat{}
 	if e := c.Bind(&req); e != nil {
@@ -14,9 +25,6 @@ func HeartbeatPhone(c *gin.Context) {
 		return
 	}
 	err := service.SaveHeartbeat(&req)
-	if err == nil { // если нет ошибок, обновляем последние данные и выполняем проверки по трекеру
-		//go service.CheckAndUpdateTracker(trk)
-	}
 
 	sendResponse(err, c)
 }
