# docs/swagger/swagger.json
@@ -11,41 +11,44 @@
         "version": "1.0"
     },
     "paths": {
-        "/users": {
-            "get": {
-                "description": "get accounts",
+        "/heartbeat": {
+            "post": {
+                "description": "Принимает координаты от смартфона, происходит: сохранение и проверка на вхождение в неозоны, обновление последних данных трекера",
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
-                    "Пользователи users"
+                    "Мониторинг"
                 ],
-                "summary": "List accounts",
+                "summary": "Прием координат от смартфона",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "name search by q",
-                        "name": "q",
-                        "in": "query"
+                        "description": "Запрос с координатами и флагами устройства",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.Heartbeat"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.UserAuth"
-                            }
-                        }
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
                     }
                 }
-            },
-            "post": {
-                "description": "get accounts",
+            }
+        },
+        "/zone/all": {
+            "get": {
+                "description": "Получение списка зон для авторизованного пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,43 +56,334 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Пользователи users"
+                    "Зоны"
                 ],
-                "summary": "List accounts",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "name search by q",
-                        "name": "q",
-                        "in": "query"
-                    }
-                ],
+                "summary": "Список зон",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.UserAuth"
+                                "$ref": "#/definitions/model.GeoZoneResponse"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
+                    }
+                }
+            }
+        },
+        "/zone/delete/{id}": {
+            "delete": {
+                "description": "Удаление зоны для авторизованного пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Зоны"
+                ],
+                "summary": "Удаление зоны",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id зоны",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
+                    }
+                }
+            }
+        },
+        "/zone/find/{id}": {
+            "get": {
+                "description": "Загрузка зоны для авторизованного пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Зоны"
+                ],
+                "summary": "Загрузка зоны",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id зоны",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.GeoZoneResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
+                    }
+                }
+            }
+        },
+        "/zone/save": {
+            "post": {
+                "description": "Создание зоны для авторизованного пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Зоны"
+                ],
+                "summary": "Создание зоны",
+                "parameters": [
+                    {
+                        "description": "Запрос настройками зоны",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.ZoneCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.GeoZoneResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
+                    }
+                }
+            }
+        },
+        "/zone/snap/{id}": {
+            "put": {
+                "description": "Привязка зоны к списку трекеров",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Зоны"
+                ],
+                "summary": "Привязка зоны",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id зоны",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Запрос привязки трекеров к зоне",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.ZoneSnapRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
+                    }
+                }
+            }
+        },
+        "/zone/update/{id}": {
+            "put": {
+                "description": "Обновление настроек зоны для авторизованного пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Зоны"
+                ],
+                "summary": "Обновление зоны",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id зоны",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Запрос настройками зоны",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.ZoneCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "err"
+                    },
+                    "500": {
+                        "description": "err"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "model.UserAuth": {
+        "model.GeoZoneResponse": {
             "type": "object",
             "properties": {
-                "firstName": {
+                "id": {
                     "type": "string"
                 },
-                "lastName": {
+                "name": {
                     "type": "string"
                 },
-                "userName": {
+                "points": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.ZonePoint"
+                    }
+                },
+                "trackers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "model.Heartbeat": {
+            "type": "object",
+            "properties": {
+                "datetime": {
+                    "type": "string",
+                    "example": "RFC3339"
+                },
+                "device_id": {
                     "type": "string"
+                },
+                "is_gps_source": {
+                    "type": "boolean"
+                },
+                "is_gsm_source": {
+                    "type": "boolean"
+                },
+                "is_low_power_alarm": {
+                    "type": "boolean"
+                },
+                "is_sos_alarm": {
+                    "type": "boolean"
+                },
+                "is_wifi_source": {
+                    "type": "boolean"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "power": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.ZoneCreateRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "points": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.ZonePoint"
+                    }
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ZonePoint": {
+            "type": "object",
+            "properties": {
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                }
+            }
+        },
+        "model.ZoneSnapRequest": {
+            "type": "object",
+            "properties": {
+                "trackers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
